k8s-ceph.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbd-provisioner
spec:
  selector:
    matchLabels:
      app: rbd-provisioner
  replicas: 1
  template:
    metadata:
      labels:
        app: rbd-provisioner
    spec:
      containers:
      - name: rbd-provisioner
        #image: "quay.io/external_storage/rbd-provisioner:latest"
        image: "elementalnet/rbd-provisioner"
      serviceAccount: rbd-provisioner
