jenkins-ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  labels:
    app: "jenkins-master"
    version: "latest"
    group: "jenkins"
    namespace: "jenkins"
  name: "jenkins-master-ingress"
spec:
   rules:
     - host: "jenkins"
       http:
         paths:
           - backend:
              serviceName: "jenkins-master-service"
              servicePort: 80
             path: "/"
